--- a/styles/activeDay.css
+++ b/styles/activeDay.css
@@ -17,7 +17,8 @@
 .dayDiv{
   height: 150px;
   min-width: 140px;
-  border: 1px solid black;
+  border-radius: 3px;
+  box-shadow: 2px 2px 1px grey;
   width: 100px;;
   margin: 10px;
   min-height: 110px;
