--- a/styles/fiveDay.css
+++ b/styles/fiveDay.css
@@ -14,6 +14,12 @@
   justify-content: center;
   flex-wrap: wrap;
 }
+.dayDivDetails{
+  width:100%;
+  height: 20%;
+  background: white;
+  cursor: pointer;
+}
 .dayDiv{
   height: 150px;
   min-width: 140px;
@@ -22,5 +28,5 @@
   width: 100px;;
   margin: 10px;
   min-height: 110px;
-  background: lightblue;
+  background: #517082;
 }
