--- a/styles/search.css
+++ b/styles/search.css
@@ -53,7 +53,7 @@
   border: none;
   box-shadow: 2px 2px 2px grey;
   color: #517082;
-  height:3.3vh;
+  height:30px;
   transition: box-shadow .5s;
 }
 #submit{
