--- a/styles/style.css
+++ b/styles/style.css
@@ -30,3 +30,9 @@ body{
   box-shadow: 0px 0px 1px grey;
   transform: translateY(2px);
 }
+
+.flex-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
