--- a/styles/weatherDetails.css
+++ b/styles/weatherDetails.css
@@ -14,7 +14,7 @@
   justify-content: center;
 }
 .weatherDetailsTitle{
-  margin-top: 15px;
+  margin: 15px 0px 15px 0px;
   font-size: 2em;
   color: black;
   text-align: center;
@@ -35,7 +35,7 @@
   border-radius: 3px;
   box-shadow: 0px 2px 1px grey;
   width: 20%;
-  margin: 10px;
+  margin: 0px 7.5px 15px 7.5px;
   min-height: 110px;
   background: #517082;
   font-size: 1.4em;
