--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,9 @@ body{
   align-items: center;
   color: white;
 }
-
+a{
+  text-decoration: none;
+}
 .button{
   color: white;
   border: none;
@@ -30,7 +32,6 @@ body{
   box-shadow: 0px 0px 1px grey;
   transform: translateY(2px);
 }
-
 .flex-center{
   display: flex;
   justify-content: center;
